style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,300&display=swap');

body {
    font-family: 'Roboto', sans-serif;
    margin: 0;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #1F2937;
    padding: 12px;
    height: 60px;
}

.footer {
    height: 72px;
    background: #1F2937;
    color: #F9FAF8;
    justify-content: space-between;
    display: flex;
    justify-content: center;
    align-items: center;
}

.left-header {
    display: flex;
}

.logo {
    font-size: 24px;
    font-weight: bold;
    color: #F9FAF8;
    display: flex;
    align-items: center;
    margin-left: 10px;
}

.logo-car {
    height: 25px;
    width: auto;
}

.links {
    font-size: 18px;
    color: #E5E7EB;
    display: flex;
    gap: 20px;
}

a {
    text-decoration: none;
    color: aliceblue;
}

li {
    list-style: none;
    display: flex;
}

.hero-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("imgs/ferrari-hero-image.jpg");
    height: 550px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}

.hero-text {
    display: flex;
    flex: 1;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    padding: 10px;
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.hero-text h1 {
    font-size: 48px;
    font-weight: 800;
    color: #F9FAF8;
}

.hero-text p {
    font-size: 18px;
    color: #E5E7EB;
}

.drivers h1 {
    font-size: 36px;
    font-weight: 800;
    color: #1F2937;
    text-align: center;
    margin-top: 40px;
    margin-bottom: 15px;
}

.drivers {
    display: flex;
    flex-direction: column;
    margin: 10px;
    padding: 15px;
}

.cards {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 20px;
    gap: 20px;
    flex-wrap: wrap;
}

.container {
    position: relative;
    width: 300px;
    height: 400px;
}

.image {
    display: block;
    width: 100%;
    height: 400px;
    border-radius: 10px;
}

.overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 400px;
    width: 100%;
    opacity: 0;
    transition: .5s ease;
    background-color: #008CBA;
    border-radius: 10px;
}

.container:hover .overlay {
    opacity: 0.8;
}

.text {
    color: white;
    font-size: 20px;
    position: relative;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    text-align: start;
}

.quote-page {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #E5E7EB;
    height: 500px;
    font-weight: 300;
    font-style: italic;
    gap: 10px;
}

.quote {
    color: #1F2937;
    font-size: 36px;
}

.name {
    font-weight: bold;
    font-size: 28px;
}

.newsletter {
    display: flex;
    height: 300px;
    justify-content: center;
    align-items: center;
    color: white;
}

.box {
    display: flex;
    background-color: #3882F6;
    height: max-content;
    width: auto;
    padding: 20px;
    border-radius: 10px;
    justify-content: space-between;
    gap: 60px;
}

.left {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.right {
    display: flex;
    align-items: center;
}

.message-title {
    font-weight: bold;
    font-size: 25px;
}

.message-text {
    color: #E5E7EB;
}

button {
    background-color: #3882F6;
    border: 2px solid white;
    border-radius: 8px;
    color: white;
    outline: 0;
    display: inline-block;
    padding: 10px 25px;
    text-align: center;
    cursor: pointer;
    box-shadow: 3px 5px lightslategray;
}

button:hover {
    background-color: grey;
    opacity: 0.9;
    color: white;
}

button:active {
    background-color: grey;
    box-shadow: 0 2px lightslategray;
    transform: translateY(2px);
}

